ingressController/ingress-def.yaml
apiVersion: extensions/v1
kind: Ingress
metadata:
  name: loadBalancer-rules
spec:
  rules:
  - host: awesomeapp-v1-example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: awesomeapp-v1
          servicePort: 80
  - host: awesomeapp-v2-example.com
    http:
      paths:
      - path: /version2
        backend:
          serviceName: awesomeapp-v2
          servicePort: 80
